@@ -1,10 +1,10 @@
-#VRML V2.0 utf8
+#VRML V2.0 utf8 Titania V0.7.6
 
 PROTO Cube [
-  exposedField SFNode appearance DEF _0 Appearance {
+  exposedField SFNode appearance DEF _1 Appearance {
     material Material { }
   }
-  exposedField SFNode geometry DEF _1 Box { }
+  exposedField SFNode geometry DEF _2 Box { }
 ]
 {
   Shape {
