@@ -1,5 +1,9 @@
 2015-01-22  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* X3DOutlineTreeView.cpp: 
+
+2015-01-22  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* titania:
 	* BrowserWidget.x3dv: 
 
